remove unused includes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,6 @@
     "rootDir": "./src",
     "strict": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/taxProcessing/EuropeTaxProcessor.ts"
-  ],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
