--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
-  "name": "your-project-name",
+  "name": "shopping-cart-ts",
   "version": "1.0.0",
-  "description": "Your project description",
+  "description": "Sample Express Shopping Cart",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf dist && tsoa spec-and-routes && tsc",
+    "start": "cross-env NODE_ENV=local node dist/app.js",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.{ts, js}\" --config .prettierrc",
     "test": "jest"
   },
   "keywords": [],
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/jest": "^27.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.54.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-node": "^11.1.0",
     "jest": "^27.0.6",
+    "prettier": "^3.1.1",
+    "rimraf": "^5.0.5",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
@@ -24,9 +39,12 @@
     "testMatch": [
       "**/__tests__/**/*.ts?(x)",
       "**/?(*.)+(spec|test).ts?(x)"
-    ],
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    }
+    ]
+  },
+  "dependencies": {
+    "axios": "^1.6.2",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "tsoa": "^5.1.1"
   }
 }
